--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,33 @@
+html {
+    background-color: AntiqueWhite;
+    height: 100%;
+}
 body {
-    width: 60%;
+    max-width: 800px;
+    background-color: Snow;
+    min-height: 100%;
     margin: auto;
     display: flex;
     flex-direction: column;
     align-content: center;
-    justify-content: center;
     padding: 10px;
     font-family: sans-serif;
+    box-shadow: 0 0 20px rgba(255,255,255,0.7)
 }
 header {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     justify-content: space-around;
     padding: 10px;
     border-bottom: 1px solid black;
 }
+footer {
+}
 nav {
+    width: 100%;
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-around;
     padding: 10px;
 }
@@ -62,9 +70,6 @@ textarea {
     margin: 10px;
     padding: 10px;
 }
-nav {
-    height: 50px;
-}
 code {
     word-wrap: break-word;
 }
@@ -83,7 +88,7 @@ h3 {
     height: 100%;
 }
 .preview {
-    width: 200px;
+    width: 300px;
     height: 200px;
     border: 1px solid black;
     border-radius: 5px;
@@ -91,6 +96,7 @@ h3 {
     padding: 10px;
 }
 .tasks {
+    flex-grow: 1;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
