--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,8 @@
 html {
-    background-color: AntiqueWhite;
     height: 100%;
 }
 body {
     max-width: 800px;
-    background-color: Snow;
     min-height: 100%;
     margin: auto;
     display: flex;
@@ -12,7 +10,7 @@ body {
     align-content: center;
     padding: 10px;
     font-family: sans-serif;
-    box-shadow: 0 0 20px rgba(255,255,255,0.7)
+    box-shadow: 0 0 20px rgba(0,0,0,0.5)
 }
 header {
     display: flex;
@@ -47,7 +45,8 @@ a {
 }
 main {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
     padding: 10px;
