--- a/css/style.css
+++ b/css/style.css
@@ -82,11 +82,30 @@ form > * {
     border-radius: 5px;
 }
 input, textarea {
+    border: none;
     outline:none;
+    padding: 10px 20px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    transition: 0.5s;
 }
 input:focus, textarea:focus {
-    border: 1px solid green;
+    box-shadow: 0 0 20px rgba(0,0,0,0.7);
 }
 textarea {
     resize: none;
+}
+.account {
+    align-self: center;
+}
+input[type="submit"] {
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    transition: 0.5s;
+}
+input[type="submit"]:hover {
+    box-shadow: 0 0 20px rgba(0,0,0,0.7);
+}
+.message {
+    color: red;
+    text-align: center;
 }
