--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,14 @@ html {
     height: 100%;
 }
 body {
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     max-width: 800px;
     min-width: 400px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
     margin: auto;
 }
 header {
@@ -32,6 +33,7 @@ nav, nav > a {
 nav > a {
     font-size: 24px;
     text-decoration: underline;
+    transition: 0.5s;
 }
 nav > a:hover {
     color: green;
@@ -108,4 +110,10 @@ input[type="submit"]:hover {
 .message {
     color: red;
     text-align: center;
+}
+main {
+    flex: 1 0 auto;
+}
+footer {
+    flex: 0 0 auto;
 }
