--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ html {
     height: 100%;
 }
 body {
+    padding: 5px;
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -108,12 +109,21 @@ input[type="submit"]:hover {
     box-shadow: 0 0 20px rgba(0,0,0,0.7);
 }
 .message {
-    color: red;
+    color: green;
     text-align: center;
+}
+.error {
+    color: red;
 }
 main {
     flex: 1 0 auto;
 }
 footer {
     flex: 0 0 auto;
+}
+h2 {
+    color: green;
+    text-align: center;
+    font-size: 24px;
+    letter-spacing: 10px;
 }
