--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,10 @@
 }
 html {
     height: 100%;
+    background-color: rgba(240,248,255,0.5);
 }
 body {
+    background-color: white;
     padding: 5px;
     min-height: 100%;
     display: flex;
@@ -15,7 +17,6 @@ body {
     justify-content: flex-start;
     align-items: center;
     max-width: 800px;
-    min-width: 400px;
     box-shadow: 0 0 20px rgba(0,0,0,0.5);
     margin: auto;
 }
@@ -40,6 +41,7 @@ nav > a:hover {
     color: green;
 }
 main {
+    width: 100%;
     display: flex;
     flex-direction: column;
 }
