--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ nav > a {
     font-size: 24px;
     text-decoration: underline;
     transition: 0.5s;
+    transition-property: box-shadow;
 }
 nav > a:hover {
     color: green;
@@ -51,6 +52,7 @@ main {
     border-bottom-right-radius: 10px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     transition: 0.5s;
+    transition-property: box-shadow;
     margin: 20px;
     padding: 20px;
 }
@@ -71,6 +73,7 @@ main {
     padding: 10px 20px;
     text-align: center;
     transition: 0.5s;
+    transition-property: box-shadow;
 }
 .comment {
     margin: 20px;
@@ -93,12 +96,14 @@ input, textarea {
     padding: 10px 20px;
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
     transition: 0.5s;
+    transition-property: box-shadow;
 }
 input:focus, textarea:focus {
     box-shadow: 0 0 20px rgba(0,0,0,0.7);
 }
 textarea {
-    resize: none;
+    resize: vertical;
+    min-height: 100px;
 }
 .account {
     align-self: center;
@@ -108,6 +113,7 @@ input[type="submit"] {
     border-top-left-radius: 10px;
     border-bottom-right-radius: 10px;
     transition: 0.5s;
+    transition-property: box-shadow;
 }
 input[type="submit"]:hover {
     box-shadow: 0 0 20px rgba(0,0,0,0.7);
