--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
     justify-content: flex-start;
     align-items: center;
     max-width: 800px;
+    min-width: 400px;
     box-shadow: 0 0 20px rgba(0,0,0,0.5);
     margin: auto;
 }
@@ -29,6 +30,9 @@ header {
 nav {
     padding: 20px;
     border-bottom: 1px solid black;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 nav, nav > a {
     margin: 20px;
